Major Refactor V15 Platform Management